[project]
name = "dbrecover"
version = "0.1.0"
description = "SQLite recovery microservice for AM backups."
authors = [
    {name = "Lilium Stargazer"}
]
license = {text = "Propietary"}
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "paramiko (>=4.0.0,<5.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "gunicorn (>=25.1.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.1.0,<27.0.0)",
    "ruff (>=0.15.1,<0.16.0)",
    "mypy (>=1.19.1,<2.0.0)"
]
